--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index index.php index.html index.htm;
+    index index.php;
 
     # Main site configuration
     location / {
