--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,55 @@
-server {
-    listen 80;
-    server_name localhost;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
-    root /usr/share/nginx/html;
-    index index.php index.html index.htm;
+events {
+    worker_connections 1024;
+}
 
-    # Main site configuration
-    location / {
-        try_files \$uri \$uri/ /index.php?\$args;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    # PHP-FPM backend (WordPress)
-    location ~ \.php$ {
-        fastcgi_pass wordpress-backend:9000;  # Communicate with backend container (named wordpress-backend)
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html\$fastcgi_script_name;
-        include fastcgi_params;
-    }
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # Error handling
-    error_page  404              /404.html;
-    location = /404.html {
-    }
+    access_log  /var/log/nginx/access.log  main;
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
+    sendfile        on;
+    keepalive_timeout  65;
+
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
+
+    # Your server block
+    server {
+        listen 80;
+        server_name localhost;
+
+        root /usr/share/nginx/html;
+        index index.php index.html index.htm;
+
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
+
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass wordpress-backend:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            internal;
+        }
     }
 }
