--- a/nginx.conf
+++ b/nginx.conf
@@ -21,9 +21,7 @@ http {
     keepalive_timeout  65;
 
     include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
 
-    # Your server block
     server {
         listen 80;
         server_name localhost;
@@ -37,7 +35,7 @@ http {
 
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass wordpress-backend:9000;
+            fastcgi_pass wordpress-backend:9000; # Ensure this resolves correctly.
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
